# ic-distillation

./: .gitignore  README.md  ictrainer.py  main.py  pyproject.toml
config/: config.yaml  contrastive_decoding.yaml  llama.yaml
config/data/: alpaca.yaml
config/model/: llama7b.yaml  pythia.yaml  tiny_llama.yaml
config/peft/: llora.yaml
config/training/: ppo.yaml
ic_distillation/: decoding.py  example_contrastive_decoding.py  ictrainer.py  main.py  preprocessing.py  utils.py
ic_distillation/setup/: download_data.py
